fix: 소비로그 수정, 카카오맵수정

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -12,10 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <!-- Kakao Map API -->
-    <script
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9d2f5e313f7480e75807d0e7aa01170d"
-    ></script>
+    <script type="text/javascript" src="%REACT_APP_KAKAO_KEY%"></script>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
